// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SessionSummaryHeader /> should match adopt count prop 1`] = `
<styled.header>
  <styled.nav>
    <LogoLink
      size="4.5rem"
      to="/"
    />
    <styled.h1>
      Lesson
       Summary
    </styled.h1>
    <SessionLink
      color="blue"
      count={22}
      text="Continue Session"
      to="/lessons/"
    />
  </styled.nav>
</styled.header>
`;

exports[`<SessionSummaryHeader /> should match baseline snapshot 1`] = `
<styled.header>
  <styled.nav>
    <LogoLink
      size="4.5rem"
      to="/"
    />
    <styled.h1>
      Review
       Summary
    </styled.h1>
    <SessionLink
      color="blue"
      count={0}
      text="Continue Session"
      to="/reviews/"
    />
  </styled.nav>
</styled.header>
`;
